# vk_sample

./: .gitattributes  .gitignore  .ninja_deps  .ninja_log  LICENSE  NULL  README.md  arena.zmap  asset_manager.py  bugs.md  build.bat  build.ninja  church.zyy  compile_shaders.bat  config.ini  dung_test.zyy  errors.txt  export_assets.bat  game_devbug.rdbg  game_ideas.md  imgui.ini  log.txt  mazes.txt  project.4coder  room1.zyy  run.bat  runtest.bat  save.txt  save_test.zyy  test1.zyy  timecmd.bat  trace.json  vert.spv  zyy_build.exp  zyy_build.lib  zyy_physics.exp  zyy_physics.lib
assets/: physx_defs.json  res.pack
assets/entity/: SHADERBALL.ENTT
assets/models/: modular_level_kit.blend1  rifle.mtl  utah-teapot.mtl
assets/shaders/: arm.vert  debug_line.frag  debug_line.vert  error_mesh.frag  gui.frag  gui.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  tri.frag
include/: app_physics.hpp  core.hpp  custom_physics.hpp  physx_physics.hpp  skeleton.hpp  uid.hpp  ztd_core.hpp  ztd_lexer.hpp  ztd_math.hpp  ztd_physics.hpp  zyy_core.hpp  zyy_internal_colors.hpp  zyy_math.hpp  zyy_physics.hpp  zyy_rng.hpp
include/App/: app.hpp  cvar.hpp  game_screen.hpp  game_settings.hpp  game_state.hpp  gfx_pipelines.hpp  vk_state.hpp
include/ProcGen/: map_gen.hpp  marching_cubes.hpp  (+2 more)
launcher/: CMakeLists.txt  conanfile.txt
launcher/src/: main.cpp
res/: data.cdb  physx_defs.json
src/: app_build.cpp  app_physics.cpp  app_platform.cpp  cultist.cpp  ztd_physics.cpp  ztd_platform.cpp  zyy_build.cpp  zyy_physics.cpp  zyy_platform.cpp
tests/: tests.cpp
webgpu/: main.cpp
(+248 files in other folders)
